<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solutionTv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/resultTv"
        android:layout_margin="16dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:layout_margin="16dp"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textSize="64sp" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/lightLavender"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClear"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/darkPeach"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBracketOpen"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/darkGrey"
                android:text="@string/bracketOpen"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBracketClose"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/darkGrey"
                android:text="@string/bracketClose"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDivide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMultiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubstraction"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/substraction"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAllClear"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/darkPeach"
                android:text="@string/allClear"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="32sp"

                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEqual"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/orange"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>